{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 26,
  "lineage": "2daca9ca-77b9-0e28-191b-f4058d58c154",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "codai_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:internet-gateway/igw-0f419478b0c4fb448",
            "id": "igw-0f419478b0c4fb448",
            "owner_id": "567877624442",
            "tags": {
              "Name": "codai-igw"
            },
            "tags_all": {
              "DeployDate": "2025-08-20",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "codai-igw",
              "Project": "CODAI-Ecosystem",
              "RomAIVersion": "v2.0-logical-reasoning-fix"
            },
            "vpc_id": "vpc-0e72dfae3415565fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.codai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "codai_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb/720015f43778a007",
            "arn_suffix": "app/codai-alb/720015f43778a007",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "codai-alb-631759409.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb/720015f43778a007",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "codai-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-001faabfcece43a70"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015f68b8b04dea176"
              },
              {
                "subnet_id": "subnet-0a474dfdaad322518"
              }
            ],
            "subnets": [
              "subnet-015f68b8b04dea176",
              "subnet-0a474dfdaad322518"
            ],
            "tags": {
              "Name": "codai-alb"
            },
            "tags_all": {
              "DeployDate": "2025-08-20",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "codai-alb",
              "Project": "CODAI-Ecosystem",
              "RomAIVersion": "v2.0-logical-reasoning-fix"
            },
            "vpc_id": "vpc-0e72dfae3415565fd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.codai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:route-table/rtb-0f3a42c7b5b66813d",
            "id": "rtb-0f3a42c7b5b66813d",
            "owner_id": "567877624442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f419478b0c4fb448",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "codai-public-rt"
            },
            "tags_all": {
              "DeployDate": "2025-08-20",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "codai-public-rt",
              "Project": "CODAI-Ecosystem",
              "RomAIVersion": "v2.0-logical-reasoning-fix"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e72dfae3415565fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.codai_igw",
            "aws_vpc.codai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083588bab66bd3ed2",
            "route_table_id": "rtb-0f3a42c7b5b66813d",
            "subnet_id": "subnet-015f68b8b04dea176"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.codai_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.codai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025ed67ea7cc59177",
            "route_table_id": "rtb-0f3a42c7b5b66813d",
            "subnet_id": "subnet-0a474dfdaad322518"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.codai_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.codai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:security-group/sg-001faabfcece43a70",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001faabfcece43a70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "codai-alb-sg20250820130938680100000002",
            "name_prefix": "codai-alb-sg",
            "owner_id": "567877624442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "codai-alb-sg"
            },
            "tags_all": {
              "DeployDate": "2025-08-20",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "codai-alb-sg",
              "Project": "CODAI-Ecosystem",
              "RomAIVersion": "v2.0-logical-reasoning-fix"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e72dfae3415565fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.codai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:security-group/sg-06a2f53255d8063db",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a2f53255d8063db",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001faabfcece43a70"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "codai-ecs-sg20250820130942561800000004",
            "name_prefix": "codai-ecs-sg",
            "owner_id": "567877624442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "codai-ecs-sg"
            },
            "tags_all": {
              "DeployDate": "2025-08-20",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "codai-ecs-sg",
              "Project": "CODAI-Ecosystem",
              "RomAIVersion": "v2.0-logical-reasoning-fix"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e72dfae3415565fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.codai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:subnet/subnet-015f68b8b04dea176",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015f68b8b04dea176",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "567877624442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "codai-public-subnet-1"
            },
            "tags_all": {
              "DeployDate": "2025-08-20",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "codai-public-subnet-1",
              "Project": "CODAI-Ecosystem",
              "RomAIVersion": "v2.0-logical-reasoning-fix"
            },
            "vpc_id": "vpc-0e72dfae3415565fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.codai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:subnet/subnet-0a474dfdaad322518",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a474dfdaad322518",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "567877624442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "codai-public-subnet-2"
            },
            "tags_all": {
              "DeployDate": "2025-08-20",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "codai-public-subnet-2",
              "Project": "CODAI-Ecosystem",
              "RomAIVersion": "v2.0-logical-reasoning-fix"
            },
            "vpc_id": "vpc-0e72dfae3415565fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.codai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "codai_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:vpc/vpc-0e72dfae3415565fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0419c458300c4cc78",
            "default_route_table_id": "rtb-0273471130ab8c29d",
            "default_security_group_id": "sg-00eefff24b69d715a",
            "dhcp_options_id": "dopt-0c50dcf71e7e7abdb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e72dfae3415565fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0273471130ab8c29d",
            "owner_id": "567877624442",
            "tags": {
              "Name": "codai-vpc"
            },
            "tags_all": {
              "DeployDate": "2025-08-20",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "codai-vpc",
              "Project": "CODAI-Ecosystem",
              "RomAIVersion": "v2.0-logical-reasoning-fix"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}